; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_buffer.c_git_buf_rtruncate_at_char.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_buffer.c_git_buf_rtruncate_at_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @git_buf_rtruncate_at_char(i32* %0, i8 signext %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8, align 1
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8 %1, i8* %4, align 1
  %6 = load i32*, i32** %3, align 8
  %7 = load i8, i8* %4, align 1
  %8 = call i64 @git_buf_rfind_next(i32* %6, i8 signext %7)
  store i64 %8, i64* %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %15

13:                                               ; preds = %2
  %14 = load i64, i64* %5, align 8
  br label %15

15:                                               ; preds = %13, %12
  %16 = phi i64 [ 0, %12 ], [ %14, %13 ]
  %17 = call i32 @git_buf_truncate(i32* %9, i64 %16)
  ret void
}

declare dso_local i64 @git_buf_rfind_next(i32*, i8 signext) #1

declare dso_local i32 @git_buf_truncate(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
